@@ -77,6 +77,7 @@ production.
 * Show --batch-size option in help of maintenance scripts that support it
 * (bug 4381) Magic quotes cleaning is not comprehensive, key strings not
   unescaped
+* (bug 30684) Fix bad escaping in mw.message for inexistent messages (i.e. <key>)
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
